NLA Editor: "Hold Forward" for "Edited Action" track doesn't work #100718

Closed
opened 2022-08-30 19:48:08 +02:00 by Jonathan Benton · 7 comments
First-time contributor

System Information
Operating system: Windows 11
Graphics card: Geforce 3080

Blender Version
Broken: 3.2.2
Worked: ? Seems to be broken for a long time.

Short description of error
When an active action layer (not pushed down) is placed above pushed down Strip layers in the NLA, the Extrapolation option "Hold Forward" for that action layer in the "Edited Action" panel in the sidebar does not work. It functions the same as the "Hold" option, and holds the keyframes for that layer both forward and backward.

Exact steps for others to reproduce the error
See attached blend file. Change "Extrapolation" for the "Action" layer to "Hold Forward," then "Hold." No matter what the setting, the layer will always "Hold" instead of "Hold Forward". If working as intended, the animation should start with the cube facing directly towards the camera rather than rotated (Change Extrapolation to "Nothing" to see desired starting orientation). broken NLA extrapolation.blend

**System Information** Operating system: Windows 11 Graphics card: Geforce 3080 **Blender Version** Broken: 3.2.2 Worked: ? Seems to be broken for a long time. **Short description of error** When an active action layer (not pushed down) is placed above pushed down Strip layers in the NLA, the Extrapolation option "Hold Forward" for that action layer in the "Edited Action" panel in the sidebar does not work. It functions the same as the "Hold" option, and holds the keyframes for that layer both forward and backward. **Exact steps for others to reproduce the error** See attached blend file. Change "Extrapolation" for the "Action" layer to "Hold Forward," then "Hold." No matter what the setting, the layer will always "Hold" instead of "Hold Forward". If working as intended, the animation should start with the cube facing directly towards the camera rather than rotated (Change Extrapolation to "Nothing" to see desired starting orientation). [broken NLA extrapolation.blend](https://archive.blender.org/developer/F13437023/broken_NLA_extrapolation.blend)
Author
First-time contributor

Added subscriber: @vinegarshots

Added subscriber: @vinegarshots

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @BClark

Added subscriber: @BClark
Member

I agree that this is a bug, Hold forward should change how the current action behaves. The display should also update to show that it is holding forward vs Hold.

I agree that this is a bug, Hold forward should change how the current action behaves. The display should also update to show that it is holding forward vs Hold.
First-time contributor

Added subscriber: @TodorNikolov

Added subscriber: @TodorNikolov
Member

https://developer.blender.org/D10229 There is an older fix started here if it can get update

https://developer.blender.org/D10229 There is an older fix started here if it can get update
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:34:45 +01:00
Wayde Moss self-assigned this 2023-04-23 18:29:19 +02:00
Member

PR fix: #107281

PR fix: https://projects.blender.org/blender/blender/pulls/107281
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-11 18:40:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100718
No description provided.